added the cool no-phone bay

--- a/app/views/shared/_nophone.html.erb
+++ b/app/views/shared/_nophone.html.erb
@@ -1,6 +1,98 @@
-<div class="no-phone">
+<!-- <div class="no-phone">
   <img style="width: 100vw" src="https://res.cloudinary.com/tark-industries/image/upload/v1548783809/treep-width-pic2.png">
 </div>
 
 
 
+ -->
+<div class="container-no-phone">
+<div class="logo-no-phone"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png"></div>
+
+<div class="container">
+  <div class="invisible-Box">
+    <div class="cloud-1"></div>
+    <div class="cloud-2"></div>
+    <div class="trees">
+      <div class="tree">0
+        <div class="vertical-line"></div>
+        <ul>
+          <li>0</li>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+      </div>
+      <div class="tree">1
+        <div class="vertical-line"></div>
+        <ul>
+          <li>0</li>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+      </div>
+      <div class="tree">2
+        <div class="vertical-line"></div>
+        <ul>
+          <li>0</li>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+      </div>
+      <div class="tree">3
+        <div class="vertical-line"></div>
+        <ul>
+          <li>0</li>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+      </div>
+      <div class="tree">4
+        <div class="vertical-line"></div>
+        <ul>
+          <li>0</li>
+          <li>1</li>
+          <li>2</li>
+        </ul>
+      </div>
+    </div>
+    <div class="jungle">
+      <div class="one"></div>
+      <div class="two"></div>
+    </div>
+    <div class="jungle-2">
+      <div class="one"></div>
+    </div>
+    <div class="jungle-3">
+      <div class="one"></div>
+    </div>
+    <div class="camp"></div>
+    <div class="jungle-4">
+      <div class="one"></div>
+    </div>
+    <div class="jungle-5">
+      <div class="one"></div>
+      <div class="two"></div>
+    </div>
+    <div class="floar"></div>
+    <div class="duck">
+      <div class="throat"></div>
+      <div class="body"></div>
+    </div>
+    <div class="duck d-2">
+      <div class="throat"></div>
+      <div class="body"></div>
+    </div>
+    <div class="duck d-3">
+      <div class="throat"></div>
+      <div class="body"></div>
+    </div>
+    <div class="water"></div>
+  </div>
+</div>
+
+  <div class="text1-no-phone">
+    <p class="greeting-no-phone">Bonjour !</p>
+    <p>Vous êtes sur tablette ou téléphone ? <br> Ce site n'est encore qu'un prototype, <br> utilisez votre ordinateur pour pouvoir <br> découvrir ce qu'il renferme !</p>
+    <p style="padding-top: 10px; font-size: 15px;">Merci :)</p>
+  </div>
+
+</div>
