--- a/app/assets/stylesheets/components/_nophone.scss
+++ b/app/assets/stylesheets/components/_nophone.scss
@@ -45,7 +45,7 @@
 
 .container-no-phone {
   background: linear-gradient(180deg, #0099AB 35.15%, #9EC3CA 100%), #C4C4C4;
-  height: 130vh;
+  /* height: 130vh; */
 }
 
 .logo-no-phone img {
@@ -62,7 +62,7 @@
   color: white;
   font-family: carme;
   font-size: 20px;
-  margin-top: -115px;
+  margin-top: -100px;
   text-align: center;
   line-height: 45px;
 }
