--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -110,4 +110,4 @@
   <datalist id="airports__depart"></datalist>
   <datalist id="airports__return"></datalist>
 
-  <ul class="flights__list"></ul>
+ <!--  <ul class="flights__list"></ul> -->
