--- a/app/assets/stylesheets/components/_loading-spinner.scss
+++ b/app/assets/stylesheets/components/_loading-spinner.scss
@@ -1,17 +1,37 @@
 .loader {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin:-60px 0 0 -60px;
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
+    height: 120px;
+    width: 120px;
+    -webkit-animation:rotate 4s linear infinite;
+    -moz-animation:rotate 4s linear infinite;
+    animation:rotate 4s linear infinite;
 }
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
-.loader__display {
-	display: block;
+
+@-moz-keyframes rotate {
+	0% {
+		transform: rotate(0); }
+	100% {
+		transform: rotate(360deg); }
+}
+
+@-webkit-keyframes rotate {
+	0% {
+		transform: rotate(0); }
+	100% {
+		transform: rotate(360deg); }
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0); }
+	100% {
+		transform: rotate(360deg); }
+}
+
+.center__loader {
+    min-height: 60vh;
+	width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
