--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -1,14 +1,17 @@
 
 .flights__list {
+  width: 850px;
   display: flex;
   flex-direction: column;
 }
 
+.flight__card__container {
+  width: 75%;
+}
 
 .flights__container {
-  width: 85%;
+  min-height: 70vh;
 	display: flex;
-	justify-content: space-around;
 }
 
 .flights__options {
@@ -20,14 +23,12 @@
 	width: 250px;
 }
 
-
 .flights__list {
   list-style: none;
   padding: 0px;
 }
 
 .flight__card {
-  width: 100%;
   margin-top: 20px;
   margin-bottom: 10px;
   background: #FFFFFF;
@@ -56,7 +57,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 600px;
   margin: 10px;
 }
 
@@ -106,7 +106,7 @@
 }
 
 .flight__card__checkout {
-  width: 100%;
+  width: 25%;
   background-color: #5CA9B2;
   display: flex;
   flex-direction: column;
@@ -121,7 +121,7 @@
   font-size: 20px;
   border: none;
   color: white;
-  padding: 10px 50px;
+  padding: 10px 40px;
 } 
 
 #details {
@@ -141,3 +141,6 @@ button:focus { outline: none; }
   border-top: 0.5px solid #b3aeae;
 }
 
+.flight__card__link_target {
+  padding-left: 0px;
+}
