--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -176,7 +176,7 @@ body, html {
   width: 24%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 30px;
+  margin-top: -20px;
 }
 
 .ccm h5 {
