--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -105,6 +105,46 @@
   </div>
 </div>
 
+<div class="carte-dette-ecologique">
+  <div class="row">
+    <div class="col-10">
+      <p>Dette écologique</p>
+    </div>
+    <div style="padding-left: 0px;" class="col-2">
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556638788/Feuilles_skytreep.png">
+    </div>
+  </div>
+  <div class="row carte-eco-row2">
+    <div class="col-8">
+      <p style="padding-top: 9px">Dette écologique du trajet :</p>
+    </div>
+    <div class="col-3 montant-dette-eco">
+      <p>24.12 EUR</p>
+    </div>
+  </div>
+  <div class="row">
+    <p class="carte-eco-row3">Comment payer votre dette ?</p>
+  </div>
+  <div class="row">
+    <p class="carte-eco-row4">
+      Selectionez simplement votre vol, puis payez le sur le site de notre partenaire.
+      Revenez ensuite sur cet onglet, un bouton est apparu, cliquez dessus !
+      <br>Autrement c'est sur votre tableau de bord.
+    </p>
+  </div>
+  <div class="row">
+    <p class="carte-eco-row5">Comprendre votre dette</p>
+  </div>
+  <div class="row carte-eco-row6">
+    <div class="col-5">
+      <p>Ici le montant que <br> nous finançons</p>
+    </div>
+    <div style="padding-right: 30px" class="col-7">
+      <p>Le reste de la dette que vous payez selon votre volonté</p>
+    </div>
+  </div>
+</div>
+
 
 
   <datalist id="airports__depart"></datalist>
