update the branch and start working on the payment system

--- a/app/javascript/components/compensation-slider.css
+++ b/app/javascript/components/compensation-slider.css
@@ -36,3 +36,7 @@
 #slider__compensation .noUi-handle:hover {
     background-color: #2DE1B4;
 }
+
+#trigger-payment:hover {
+    background-color: #2DE1B4;
+}
