--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -144,6 +144,16 @@ button:focus { outline: none; }
 
 .details__div {
   border-top: 0.5px solid #b3aeae;
+  display: flex;
+  justify-content: space-between;
+}
+
+.dette__infographie__container__front {
+  min-width: 160px;
+  font-size: 15px;
+  margin: 5px;
+  display: flex;
+  color: white;
 }
 
 .flight__card__link_target {
