--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -169,7 +169,6 @@
     }
 }
 
-
 .end__square {
     width: 9px;
     height: 30px;
@@ -180,6 +179,9 @@
     right: -6px;
 }
 
+#compensation-button {
+    
+}
 
 
 
