--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -20,8 +20,8 @@
         <div class="search__bar__frame">
             <form class="search">
                 <div class="search__bar__box">
-                    <input type="text" class="search__field left-element" id="departLoc__search" placeholder="Partir de" list="airports__depart">
-                    <input type="text" class="search__field right-element" id="returnLoc__search" placeholder="Aller à" list="airports__return">
+                    <input type="text" class="search__field left-element" id="departLoc__search" autocomplete="off" placeholder="Partir de" list="airports__depart">
+                    <input type="text" class="search__field right-element" id="returnLoc__search" autocomplete="off" placeholder="Aller à" list="airports__return">
                 </div>
                 <div class="search__bar__box">
                     <input type="text" class="search__field left-element" id="departDate__search" placeholder="Aller le">
