--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -24,8 +24,8 @@
             </div>
             <div class="search__bar__frame" id="search__bar__frame__home">
                 <div class="search__bar__box home__search__box">
-                    <input type="text" class="search__field home__search__field left-element" id="departLoc__search" name="depart" placeholder="Partir de" list="airports__depart">
-                    <input type="text" class="search__field home__search__field right-element" id="returnLoc__search" name="return" placeholder="Aller à" list="airports__return">
+                    <input type="text" class="search__field home__search__field left-element" autocomplete="off" id="departLoc__search" name="depart" placeholder="Partir de" list="airports__depart">
+                    <input type="text" class="search__field home__search__field right-element" autocomplete="off" id="returnLoc__search" name="return" placeholder="Aller à" list="airports__return">
                 </div>
                 <div class="search__bar__box home__search__box">
                     <input type="text" class="search__field home__search__field left-element" id="departDate__search" name="from" placeholder="Aller le">
