--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -105,6 +105,10 @@
   </div>
 </div>
 
+
+
+
+
 <div class="carte-dette-ecologique">
   <div class="row">
     <div class="col-10">
@@ -137,15 +141,26 @@
   </div>
   <div class="row carte-eco-row6">
     <div class="col-5">
-      <p>Ici le montant que <br> nous finançons</p>
+      <p>En bleu le montant que nous finançons.</p>
     </div>
     <div style="padding-right: 30px" class="col-7">
       <p>Le reste de la dette que vous payez selon votre volonté</p>
     </div>
   </div>
+  <div class="row carte-eco-row7">
+    <div class="col-5">
+      <p style="font-size: 13px; padding-top: 6px">Dette écologique :</p>
+    </div>
+    <div class="col-3 st-finance">
+      <p>3,12€</p>
+    </div>
+    <div class="col-3 user-finance">
+      <p>3,12€</p>
+    </div>
+  </div>
 </div>
 
-
+<i class="fas fa-square"></i>
 
   <datalist id="airports__depart"></datalist>
   <datalist id="airports__return"></datalist>
