--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -377,9 +377,14 @@ body, html {
 
 
 
+
+
+
+
+
 .carte-dette-ecologique {
   width: 350px;
-  height: 380px;
+  height: 360px;
   margin: 50px;
   padding-left: 10px;
   padding-top: 12px;
@@ -460,8 +465,33 @@ body, html {
   font-size: 13px;
 }
 
+.fa-square {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
 
+.carte-eco-row7 {
+  padding-top: 18px;
+}
 
+.st-finance {
+  background-color: $blue;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.user-finance {
+  background-color: $green;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 
 
 
