--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -160,6 +160,45 @@
   </div>
 </div>
 
+<div class="carte-prix">
+  <div class="row">
+    <div class="col-9">
+      <p>Prix en détail</p>
+    </div>
+    <div class="col-3 carte-prix-logo">
+      <img src="https://alex-magicien.fr/wp-content/uploads/2017/03/logo-air-france-ce-570x570.png">
+    </div>
+  </div>
+  <div class="row carte-prix-row2">
+    <div class="col-2">
+      <i class="fas fa-plane"></i>
+      <i class="fas fa-suitcase"></i>
+      <i class="fas fa-credit-card"></i>
+    </div>
+    <div style="font-size: 14px; padding-left: 0px" class="col-6">
+      <p>Prix du billet :</p>
+      <p>Bagage à main :</p>
+      <p>Mode de Paiement : </p>
+      <p style="font-size: 11px; color: grey; line-height: 0px">(Avec Visa Carte Bleu)</p>
+    </div>
+    <div style="color: rgb(71, 71, 71);" class="col-4">
+      <p>109 EUR</p>
+      <p>Inclus</p>
+      <p>0 EUR</p>
+    </div>
+  </div>
+  <div class="row carte-prix-row3">
+    <div class="col-8">
+      <p>Total</p>
+      <p style="font-size: 12px; color: grey; padding-top: 5px; line-height: 15px;">Non remboursable <br>
+        Vérifier sur le site du fournisseur les conditions d’annulations</p>
+    </div>
+    <div class="col-4">
+      <p><strong>109 EUR</strong></p>
+    </div>
+  </div>
+</div>
+
 <i class="fas fa-square"></i>
 
   <datalist id="airports__depart"></datalist>
