--- a/app/views/shared/_nophone.html.erb
+++ b/app/views/shared/_nophone.html.erb
@@ -8,7 +8,7 @@
 <div class="container-no-phone">
 <div class="logo-no-phone"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png"></div>
 
-<div class="container">
+<div class="container-no-phone-2">
   <div class="invisible-Box">
     <div class="cloud-1"></div>
     <div class="cloud-2"></div>
