--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -63,7 +63,7 @@
           <h6 class="info-item2">**********</h6>
         </div>
         <div class="col-4">
-          <h6 class="info-item3">Changer mon password</h6>
+          <h6 class="info-item3">changer mot de passe<br/></h6>
         </div>
       </div>
 
