--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -108,10 +108,24 @@
 
 .background__container {
   background-image: url('https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg');
-  background-color: rgba(255,0,0,0.4);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  height: 80vh;
+
+  h3 {
+    text-align: center;
+  }
+}
+
+.compensation-background-layer {
+    background-color: rgba(255, 255, 255, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -179,12 +193,31 @@
     right: -6px;
 }
 
-#compensation-button {
-    
+.stripe-button-el { 
+  display: none !important;
 }
 
+.hide__stripe__form {
+  display: none;
+  width: 100%;
+}
 
+.center-compensation-form {
+    display: flex;
+    justify-content: center;
+}
 
+#stripe-trigger-payment {
+    width: 80%;
+
+    &:hover {
+        background-color: #2DE1B4;
+    }
+}
+
+#title-target {
+    min-height: 80vh;
+}
 
 
 
