--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -69,8 +69,7 @@
           <%= hidden_field_tag 'distance'%>
           <%= hidden_field_tag 'co2'%>
           <%= hidden_field_tag 'status'%>
-
-          <%= hidden_field_tag 'total'%>
+          <%= hidden_field_tag 'dette_eco'%>
           <%= hidden_field_tag 'skytreep_participation'%>
 
           <button type="button" class="btn btn-secondary" data-dismiss="modal">non</button>
