--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -5,7 +5,7 @@
 <div class="search__bar__container" id="search__bar__home__background">
     <div class="search__bar__element__container">
         
-        <form class="search" id="home__search__form" method="get" action="http://localhost:3000/search">
+        <form class="search" id="home__search__form" method="get" action="https://skytreep.herokuapp.com/search">
             <div class="search__bar__options">
                 <div class="aller-retour">
                     <select id="flight_type" name="flight_type">
