--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -61,9 +61,17 @@
 }
 
 .flight__card__div__info {
-  width: 400px;
+  height: 64px;
+  font-size: 17px;
+  width: 500px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+
+  .flight__card__info__depart, .flight__card__duree__trajet, .flight__card__info__arrivee  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .flight__card__header {
@@ -81,11 +89,12 @@
 }
 
 .flight__card__info__depart {
-  width: 150px;
+  width: 170px;
   text-align: right;
 }
 
 .flight__card__depart__code__heure {
+  font-weight: bold;
   display: flex;
   justify-content: flex-end;
 }
@@ -96,11 +105,12 @@
 
 
 .flight__card__info__arrivee {
-  width: 150px;
+  width: 170px;
   text-align: left;
 }
 
 .flight__card__arrivee__code__heure {
+  font-weight: bold;
   display: flex;
   justify-content: flex-start;
 }
@@ -162,8 +172,42 @@ button:focus { outline: none; }
 
 .flight__presentation__container {
   height: 74%;
-  padding: 5px 30px;
+  padding: 5px 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
+.flight__card__nom__airport {
+  p {
+    font-size: 15px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
