changer le logo phone

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -385,13 +385,12 @@ body, html {
 .carte-dette-ecologique {
   width: 350px;
   height: 360px;
-  margin: 50px;
   padding-left: 10px;
   padding-top: 12px;
   border-radius: 5px;
   position: relative;
   background-color: white;
-  box-shadow: 1px 1px 7px grey;
+  /* box-shadow: 1px 1px 7px grey; */
   font-size: 16px;
 }
 
