--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -5,7 +5,7 @@
 <div class="search__bar__container" id="search__bar__home__background">
     <div class="search__bar__element__container">
         
-        <form class="search" id="home__search__form" method="get" action="http://www.skytreep.fr/search">
+        <form class="search" id="home__search__form" method="get" action="http://localhost:3000/search">
           <!-- http://localhost:3000/search -->
           <!-- http://www.skytreep.fr/search -->
             <div class="search__bar__options">
