--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,7 +108,7 @@
 
 
 
-<div class="carte-dette-ecologique">
+<!-- <div class="carte-dette-ecologique">
   <div class="row">
     <div class="col-10">
       <p>Dette écologique</p>
@@ -196,7 +196,7 @@
       <p><strong>109 EUR</strong></p>
     </div>
   </div>
-</div>
+</div> -->
 
 
   <datalist id="airports__depart"></datalist>
