--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -50,7 +50,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Merci de nous faire confiance</h5>
+        <h5 class="modal-title" id="exampleModalLabel">!-- Vous devez être connecter pour aller plus loin --! 
+          <br>Merci de nous faire confiance</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
