--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -157,9 +157,9 @@
       <p>3,12€</p>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="carte-prix">
+<!-- <div class="carte-prix">
   <div class="row">
     <div class="col-9">
       <p>Prix en détail</p>
