--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -36,11 +36,29 @@
 /* DEBUT DU MENU CENTRAL */
 
 .avatar-dash {
-  width: 150px;
-  padding-top: 150px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  width: 120px;
+}
+
+.dashboard-direction {
+  transform: rotate(90deg);
+}
+
+.category-container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  font-size: 17px;
+  margin-top: 8px;
+}
+
+.dashboard-presentation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.categories-block {
+  width: 100%
 }
 
 .hello-dash {
