--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -394,6 +394,10 @@ body, html {
   font-size: 16px;
 }
 
+.tooltip.left .tooltip-arrow {
+  border-left-color: white;
+}
+
 .carte-dette-ecologique:before {
   content : "";
   position: absolute;
@@ -453,7 +457,7 @@ body, html {
   content : "";
   position: absolute;
   left    : 11px;
-  top  : 248px;
+  top  : 268px;
   height  : 1px;
   width   : 88%;
   border-bottom:1px solid lightgrey;
