--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,19 +5,19 @@
 
       <li class="li-before">
        <li><i class="fas fa-plane"></i></li>
-       <li><a href="http://localhost:3000/search">Vols</a></li>
+       <li><%= link_to 'Vols', search_path %></li>
      </li>
 
 
       <li class="li-before">
        <li><i class="far fa-lightbulb"></i></li>
-       <li><a href="http://localhost:3000/about">A propos</a></li>
+       <li><%= link_to 'A propos', about_path %></li>
      </li>
 
 
       <li class="li-before">
        <li><i class="fas fa-tree"></i></li>
-       <li><a href="http://localhost:3000/lesarbres">Les arbres</a></li>
+       <li><%= link_to 'Les arbres', lesarbres_path %></li>
      </li>
 
       <li class="li-before">
@@ -38,7 +38,7 @@
     </ul>
 
       <div class="logo">
-        <a href="http://localhost:3000">
+        <a href="http://www.skytreep.fr">
           <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556618176/LOGO_SKYTREE_P_blanc.png">
         </a>
       </div>
