--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,9 +3,8 @@
 
       <li class="li-before">
        <li><i class="fas fa-plane"></i></li>
-       <li><a href="#">Vols</a></li>
+       <li><%= link_to 'Vols', search_path %></a></li>
      </li>
-
 
       <li class="li-before">
        <li><i class="far fa-lightbulb"></i></li>
