--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div id="home">
 <div id="section-all">
   <div id="section1">
 
@@ -8,8 +9,10 @@
     <div class="slogan">
       <h1>Plantez des arbres <br> en réservant <br> vos billets d'avions<br></h1>
     </div>
-
-    <%= render 'shared/searchbar' %>
+    
+    <div class="search__bar__container" id="search__bar__home__background">
+        <%= render 'shared/searchbar' %>
+    </div>
 
     <div class="compteur-arbres">
       <h2>10,762</h2>
