--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -2,41 +2,41 @@
 	display: flex;
     align-items: center;
     flex-direction: column;
-    width: 80%;
+    width: 800px;
     margin: auto;
     padding-bottom: 50px;
 }
 
 .compensation__stats__container {
     background-color: #FBFAEB;
-    width: 80%;
-    height: 50vh;
+    width: 800px;
+    height: 350px;
 	border-radius: 3px;
 	margin: 30px;
 	display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 10px;
 }
 
 
 .compensation__first__part {
 	display: flex;
     justify-content: space-between;
-    height: 33%;
+    height: 70px;
 }
 
 .compensation__second__part {
 	display: flex;
     justify-content: center;
-    height: 34%;
+    height: 100px;
     align-items: center;
-    width: 100%;
 }
 
 .compensation__third__part {
 	display: flex;
     justify-content: flex-end;
-    height: 33%;
+    height: 100px;
     align-items: flex-end;
 }
 
@@ -49,7 +49,7 @@
 	padding: 0px;
 	display: flex;
 	flex-direction: column;
-	width: 22%;
+	width: 200px;
 	border-radius: 3px;
 	background-color: #C3F5E8;
 
@@ -112,10 +112,11 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 80vh;
+  height: 100vh;
 
   h3 {
     text-align: center;
+    margin-top: 30px;
   }
 }
 
@@ -219,7 +220,41 @@
     min-height: 80vh;
 }
 
+.modal-like-frame {
+    height: 275px;
+    background-color: rgba(4, 4, 9, 0.7);
 
+    h4 {      
+        font-family: Alegreya Sans SC;
+        color: white;
+        margin: 0px;
+        height: 75px;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+}
+
+.compensation-choix-user {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+    width: 80%;
+    margin: auto;
+
+    button {
+        border-radius: 4px;
+        height: 70px;
+        width: 250px;
+        color: white;
+        border: none;
+
+        &:hover {
+            filter: brightness(107%);
+        }
+    }
+}
 
 
 
