--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,39 +1,6 @@
 
 <div class="search__bar__container">
-    <div class="search__bar__element__container">
-        <div class="search__bar__options">
-            <div class="aller-retour">
-                <select id="flight_type">
-                    <option value="oneway">Aller simple</option>
-                	<option value="round">Aller retour</option>
-                </select>
-            </div>
-
-
-            <p class="passager__description">Passagers</p>
-            <div class="passager">
-                <div class="value-button" id="decrease"  value="Decrease Value"><p>-</p></div>
-                    <input type="number" id="passengers" min="1" max="9" value="1" />
-                <div class="value-button" id="increase"  value="Increase Value"><p>+</p></div>
-            </div>
-        </div>
-        <div class="search__bar__frame">
-            <form class="search">
-                <div class="search__bar__box">
-                    <input type="text" class="search__field left-element" id="departLoc__search" autocomplete="off" placeholder="Partir de" list="airports__depart">
-                    <input type="text" class="search__field right-element" id="returnLoc__search" autocomplete="off" placeholder="Aller à" list="airports__return">
-                </div>
-                <div class="search__bar__box">
-                    <input type="text" class="search__field left-element" id="departDate__search" placeholder="Aller le">
-                    <input type="text" class="search__field right-element" id="returnDate__search" placeholder="Retour le">
-                </div>
-                <button class="checkout__button" id="blue">
-                    Rechercher
-                </button>
-
-            </form>
-        </div>
-    </div>
+  <%= render 'shared/searchbar' %>
 </div>
 
 <datalist id="airports__depart"></datalist>
@@ -43,10 +10,10 @@
  	
     
 </div>
-
+ 
 <div id='searchPage'></div>
 
-<div class="modal fade" id="compensation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="compensation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -62,7 +29,7 @@
         </button>
       </div>
       <div class="modal-body" id="insert-compensation-text">
-        <!-- Introduce the 2 sentences with the data (change the view for what tanguy did) -->
+        
       </div>
       <div class="modal-footer">
         <%= form_tag flights_path, :class => 'compensation-modal-footer' do %>
@@ -85,9 +52,9 @@
           
          
       </div>
-    </div>
+    </div> 
   </div>
-</div>
+</div> -->
 
 
 
