--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
 
     <div class="compteur-arbres">
       <h2>000</h2>
-      <h5>D'arbres plantés par les utilisateurs de SKYTREE'P</h5>
+      <h5>Arbres plantés par les utilisateurs de SKYTREE'P</h5>
       <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548505333/arrow_treep.png">
     </div>
 
