--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -112,7 +112,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 100vh;
+  height: 800px;
 
   h3 {
     text-align: center;
@@ -198,9 +198,13 @@
   display: none !important;
 }
 
-.hide__stripe__form {
+.hide__form {
   display: none;
-  width: 100%;
+}
+
+.hide__stripe__form {
+    display: none;
+    width: 100%;
 }
 
 .center-compensation-form {
@@ -232,6 +236,20 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
+    }
+}
+
+.modal-like-frame-compensation {
+    height: 70px;
+    background-color: rgba(4, 4, 9, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+        font-family: Alegreya Sans SC;
+        color: white;
+        margin: 0px;
     }
 }
 
