--- a/app/views/compensations/new.html.erb
+++ b/app/views/compensations/new.html.erb
@@ -1,6 +1,32 @@
 
-<div id="title-target">
+<div id="title-target-compensation">
 	<div class="center__loader">
         <img class="loader" src="https://res.cloudinary.com/tark-industries/image/upload/v1556034462/Spinner1.png">
     </div>
+</div>
+
+
+<div class="hide__stripe__form">
+	<%= form_tag compensations_path, :class => 'center-compensation-form' do %>
+		<%= hidden_field_tag 'price'%>
+		<%= hidden_field_tag 'ville_aller'%>
+		<%= hidden_field_tag 'ville_retour'%>
+		<%= hidden_field_tag 'date_aller'%>
+		<%= hidden_field_tag 'date_retour'%>
+		<%= hidden_field_tag 'distance'%>
+		<%= hidden_field_tag 'co2'%>
+		<%= hidden_field_tag 'status'%>
+		<%= hidden_field_tag 'dette_eco'%>
+		<%= hidden_field_tag 'skytreep_participation'%>
+		<%= hidden_field_tag 'user_participation'%>
+
+		<script src="https://checkout.stripe.com/checkout.js" class="stripe-button" id="compensation-button"
+			data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+			data-name="Compensation Carbone"
+			data-email="<%= current_user.email %>"
+			data-description="Voyage à .."
+			data-currency="EUR">
+		</script>
+		<button type="submit" id="stripe-trigger-payment" class="checkout__button">Payer ma dette écologique</button>
+	<% end %>
 </div>
