--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <div class="slogan">
       <h1>Plantez des arbres <br> en réservant <br> vos billets d'avions<br></h1>
     </div>
-    
+
     <div class="search__bar__container" id="search__bar__home__background">
         <%= render 'shared/searchbar' %>
     </div>
@@ -21,13 +21,157 @@
     </div>
 
     <div class="foret-fin-section1">
-      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556560112/forest-back.png">
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1560341742/forest_skytreep.png">
     </div>
   </div>
 
 
 
-  <div id="section2">
+  <div class="home_explications">
+
+    <div class="logo-homex">
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556618787/LOGO_SKYTREE_P_noir.png">
+      <h4>Comment ça marche ?</h4>
+    </div>
+
+
+    <div class="homex__1">
+      <div class="row">
+        <div class="col-3 dot1">
+          <svg width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="20.5" cy="20.5" r="20.5" fill="black"/>
+          <path d="M16.0977 11.9971V9.90234L22.4258 8.99414V30H19.7305V11.4844L16.0977 11.9971Z" fill="white"/>
+          </svg>
+        </div>
+        <div class="col-6 text_homex1">
+          <h4>Pour chaque billet et par passager, nous calculons le montant de Co2 rejeté dans l’atmosphère.</h4>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-1 destinationA">
+          <h5>PARIS</h5>
+        </div>
+        <div class="col-1 planes-homex">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1560346067/plane_go_up.png">
+        </div>
+        <div class="col-4 svg-homex">
+          <ul id="horizontal-list-homex">
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+            <li><svg width="23" height="4" viewBox="0 0 23 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="23" height="4" rx="2" fill="#C4C4C4"/>
+            </svg>
+            </li>
+          </ul>
+        </div>
+        <div class="col-1 planes-homex plane2-homex">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1560346060/plane_landing.png">
+        </div>
+        <div class="col-1 destinationA">
+          <h5>PARIS</h5>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <div id="section2">
     <div class= "home__frame">
       <div class="logo-ccm">
         <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556618787/LOGO_SKYTREE_P_noir.png">
@@ -106,7 +250,7 @@
     </div>
   </div>
 </div>
-
+ -->
 
 
 
@@ -205,4 +349,4 @@
   <datalist id="airports__depart"></datalist>
   <datalist id="airports__return"></datalist>
 
- 
+
