--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,10 +3,6 @@ body, html {
 }
 
 
-/*    * * * * * * * * * * *
-      * THIS IS SECTION 1 *
-      * * * * * * * * * * *    */
-
 
 
 #section1 {
@@ -47,505 +43,89 @@ body, html {
   margin-top: -10vh;
 }
 
+/* --------Section explications------LOGO--------- */
 
 
-  /*  * * * * * * * * * * *
-      * THIS IS SECTION video *
-      * * * * * * * * * * *   */
-
-.section-video iframe {
+.logo-homex img {
+  width: 23%;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
   display: block;
+  margin-top: -50px;
 }
 
-  /*  * * * * * * * * * * *
-      * THIS IS SECTION 2 *
-      * * * * * * * * * * *   */
-
-
-
-
-#section2 {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1554914260/bluesquare.png');
-  background-size: cover;
-  background-repeat: repeat-y;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.container__solution {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 40px;
-}
-
-.container__explications {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 30px;
-}
-
-.ticket {
-  img {
-  width: 350px;
-  }
-}
-
-.home__frame {
-  width: 80%;
-  margin: auto;
-}
-
-.solution {
-  width: 550px;
-}
-
-.number {
-  width: 50px;
-}
-
-.explication__1 {
-  margin-right: 15px;
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  h4 {
-    color: $green;
-    margin: 0;
-    margin-bottom: 15px;
-  }
-
-  h5 {
-    margin: 10px 0;
-    text-align: justify;
-  }
-}
-
-.explication__2 {
-  margin-left: 15px;
-  height: 300px;
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  h4 {
-    color: $green;
-    margin: 0;
-  }
-
-  h5 {
-    margin: 0;
-  }
-}
-
-.boutons__explication {
-  display: flex;
-  justify-content: left;
-}
-
-.tooltip.in{opacity:1!important;}
-
-.tooltip.bottom .tooltip-arrow {
-  top: 0;
-  left: 50%;
-  margin-left: -5px;
-  border-bottom-color: white; /* black */
-  border-width: 0 5px 5px;
-}
-
-.white-tooltip + .tooltip > .tooltip-inner {background-color: white ;}
-
-.tooltip-inner {
-  color: black;
-  max-width: 500px;
-  text-align: justify;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 2px 10px grey;
-}
-
-
-.logo-ccm img {
-  display: block;
-  width: 24%;
-  margin-left: auto;
-  margin-right: auto;
+.logo-homex h4 {
+  text-align: center;
   margin-top: -20px;
+  padding-bottom: 60px;
+  font-family: 'Carme';
+  font-size: 1.6vw;
 }
 
-.ccm h5 {
-  text-align: center;
-  padding-bottom: 10px;
-  margin-top: -10px;
-}
+/* --------Section explications----HOMEX1----------- */
 
-.section-video {
-  padding-bottom: 40px;
-}
-
-.ticket-dette img {
-  width: 345px;
-  float: right;
-}
-
-.def-dette {
-  font-weight: 700;
-  color: $green;
-  font-size: 20px;
-  text-align: justify;
-}
-
-.explications1et2 img {
-  width: 50px;
-  margin-left: 60px;
-  margin-right: 60px;
-}
-
-.explication1, .explication2 {
-  width: 50%;
-  padding-top: 50px;
-}
-
-.explication1 h5, .explication2 h5 {
-  line-height: 24px;
-  padding-bottom: 9px;
-}
-
-.explication2 {
+.dot1 {
   text-align: right;
+  margin-top: 23px;
 }
 
-/* BUTTON PART */
-
-.section2-button {
-  background-color: $green;
-  padding: 8px 13px;
-  margin: 5px;
-  margin-left: 0px;
-  color: white;
-  border-radius: 3px;
-  font-size: 16px;
+.text_homex1 h4 {
+  font-size: 2vw;
+  color: black;
+  font-family: 'Carme';
+  padding-bottom: 35px;
 }
 
-.text-button {
-  display: none;
-  margin-top: 20px;
-  width: 200%;
-  background-color: white;
-  box-shadow: 0px 2px 10px grey;
-  padding: 4px 9px;
-  font-family: "raleway", sans-serif;
-  font-size: 13.5px;
-  border-radius: 4px;
-}
-
-.text-button2 {
-  text-align: left;
-}
-
-.section2-button2 {
-  margin-left: -100%;
-}
-
-.section2-button:hover + .text-button {
-  display: inline-block;
-}
-
-.square-but {
-  width: 20px;
-  height: 20px;
-  transform: rotate(45deg);
-  background-color: white;
-  margin-left: 20px;
-  margin-top: -9px;
-}
-
-.sq1 {
-  margin-left: 100px !important;
-}
-
-.sq2 {
-  margin-left: 200px !important;
-}
-
-
-
-/* BUTTON PART */
-
-
-
-  /*  * * * * * * * * * * *
-      * THIS IS SECTION 3 *
-      * * * * * * * * * * *   */
-
-
-
-#section3 {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548764355/footer-treep-iconsss.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  padding: 0px 0px 35px 60px;
-  color: white;
-  position: relative;
-}
-
-.network {
-  position: absolute;
-  right: 20px;
-  padding-top: 100px;
-}
-
-.network img {
-  width: 50px;
-  padding-bottom: 20px;
-}
-
-#section3 a {
-  color: white;
-}
-
-#section3 .container-home {
-  margin-left: 5vw !important;
-}
-
-.container-footer1 {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.container-footer2 img {
-  width: 24px;
-  height: 17px;
-}
-
-.container-footer2 {
-  padding-bottom: 30px;
-  padding-right: 20px;
-}
-
-#section3 .container-footer3 {
-  margin-left: 15vw !important;
-}
-
-.text-footer p {
-  text-align: center;
-  font-size: 12px;
-  padding-right: 16%;
-  padding-left: 10%;
-  margin-bottom: 0px;
-}
-
-  /*  * * * * * * * * * * *
-      *  MEDIA   QUERIES  *
-      * * * * * * * * * * *   */
-
-@media only screen
-  and (min-device-width: 834px)
-  and (max-device-width: 1112px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-  #section2 {
-    min-height: 75vh;
-  }
-  .container-footer1 {
-    margin-top: -20px;
-  }
-  #section3 {
-    min-height: 40vh;
-  }
-  .compteur-arbres {
-    padding-top: 250px;
-    padding-bottom: 100px;
-  }
-}
-
-
-
-@media only screen and (max-width: 1250px) {
-  .wider-text-button {
-    width: 180% !important;
-  }
-}
-
-
-
-
-
-
-
-
-.carte-dette-ecologique {
-  width: 350px;
-  height: 360px;
-  padding-left: 10px;
-  padding-top: 12px;
-  border-radius: 5px;
-  position: relative;
-  background-color: white;
-  /* box-shadow: 1px 1px 7px grey; */
-  font-size: 16px;
-}
-
-.tooltip.left .tooltip-arrow {
-  border-left-color: white;
-}
-
-.carte-dette-ecologique:before {
-  content : "";
-  position: absolute;
-  left    : 11px;
-  top  : 43px;
-  height  : 1px;
-  width   : 88%;
-  border-bottom:1px solid lightgrey;
-}
-
-.carte-dette-ecologique img {
-  width: 25px;
-  margin-top: -5px;
-}
-
-.carte-eco-row2 {
-  font-size: 13.5px;
-  padding-top: 18px;
-}
-
-.montant-dette-eco {
-  color: white;
-  background-color: $green;
-  border-radius: 5px;
-  padding: 10px 2px;
+.destinationA {
+  margin-left: -75px;
+  padding-top: 4px;
+  padding-right: 15px;
+  padding-left : 15px;
+  padding-bottom: 4px;
+  background: #F4F4F4;
+  border: 1px solid #E0E0E0;
+  box-sizing: border-box;
+  border-radius: 9px;
   text-align: center;
 }
 
-.carte-eco-row3 {
-  padding-left: 14px;
-  padding-top: 10px;
+.destinationA h5 {
+  font-family: Alegreya Sans SC;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
 }
 
-.carte-eco-row3:before {
-  content : "";
-  position: absolute;
-  left    : 11px;
-  top  : 130px;
-  height  : 1px;
-  width   : 88%;
-  border-bottom:1px solid lightgrey;
+.planes-homex img {
+  width: 40px;
+  padding-top: 4px;
 }
 
-.carte-eco-row4 {
-  padding-top: 15px;
-  padding-left: 16px;
-  padding-right: 46px;
-  font-size: 13px;
-}
-
-.carte-eco-row5 {
-  padding-left: 14px;
-  padding-top: 10px;
-}
-
-.carte-eco-row4:before {
-  content : "";
-  position: absolute;
-  left    : 11px;
-  top  : 268px;
-  height  : 1px;
-  width   : 88%;
-  border-bottom:1px solid lightgrey;
-}
-
-.carte-eco-row6 {
-  padding-top: 15px;
-  font-size: 13px;
+.plane2-homex img {
+  margin-left: -325px;
 }
 
 
-.carte-eco-row7 {
-  padding-top: 18px;
+.svg-homex {
+  display: table;   /* Allow the centering to work */
+  margin: 0 auto;
 }
 
-.st-finance {
-  background-color: $blue;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  color: white;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.user-finance {
-  background-color: $green;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  color: white;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
+ul#horizontal-list-homex {
+  min-width: 696px;
+  list-style: none;
+  padding-top: 20px;
+  margin-left: -140px;
+  }
+  ul#horizontal-list-homex li {
+    display: inline;
+    padding-right: 1vw;
+  }
 
 
 
 
 
-
-
-
-
-.carte-prix {
-  width: 300px;
-  height: 290px;
-  margin: 50px;
-  padding-left: 15px;
-  padding-top: 12px;
-  border-radius: 5px;
-  position: relative;
-  background-color: white;
-  box-shadow: 1px 1px 7px grey;
-  font-size: 16px;
-}
-
-.carte-prix-logo img {
-  width: 60px;
-  margin-top: -19px;
-  margin-left: -27px;
-}
-
-.carte-prix:before {
-  content : "";
-  position: absolute;
-  left    : 11px;
-  top  : 43px;
-  height  : 1px;
-  width   : 88%;
-  border-bottom:1px solid lightgrey;
-}
-
-.carte-prix-row2 {
-  margin-top: 10px;
-  line-height: 30px;
-}
-
-.carte-prix-row2:before {
-  content : "";
-  position: absolute;
-  left    : 11px;
-  top  : 180px;
-  height  : 1px;
-  width   : 88%;
-  border-bottom:1px solid lightgrey;
-}
-
-.carte-prix-row3 {
-  padding-top: 50px;
-}
 
 
 
